# mighty_logger

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA.md  README.md  USAGING.md  pyproject.toml  setup.py
docs/: APPLYING.md  DATA.md
docs/source/: animation_type.rst  animations.rst  ansi_format.rst  basic_logger.rst  color_picker.rst  conf.py  data.rst  entry_type.rst  entry_types.rst  environment_type.rst  environments.rst  example.rst  exceptions.rst  exporter.rst  how_to_use.rst  index.rst  instruction-APPLYING.md  instruction-EXAMPLE.md  license.rst  logger-class.rst  mighty_logger-basic-lib_types-package.rst  mighty_logger-basic-package.rst  mighty_logger-class.rst  mighty_logger-package.rst  mighty_logger-src-lib_types_collection-package.rst  mighty_logger-src-package.rst  mighty_logger.rst  modifier.rst  simple_logger.rst  singleton.rst  sorting_key_type.rst  sorting_keys.rst  test.py  text_buffer.rst  text_buffer_type.rst  todo.rst
mighty_logger/: __init__.py  mighty_logger.py  powerful_logger.py  simple_logger.py
mighty_logger/basic/: __init__.py  basic_logger.py  exceptions.py  exporter.py  lib_types.py  modifier.py  singleton.py  sort.py  text_buffer.py  text_buffer_type.py
mighty_logger/src/: __init__.py  animation.py  animations.py  ansi_format.py  color_picker.py  entry_types.py  environments.py  log_enums.py  log_environment.py  sorting_keys.py  status_variables.py  text_buffer.py  ~status_variables.py
mighty_logger/text/: __init__.py  animation.py  icon_set.py  text_buffer.py  ~animation.py  ~icon_set.py
qt_colored_logger/: __init__.py  ansi_format.py  color_picker.py  colored_logger.py  exceptions.py  html_colored_logger.py  powerful_logger.py  py_colored_logger.py  qt_colored_logger.py  singleton.py  test.py
qt_colored_logger/_basic/: __init__.py  _basic_logger.py  _exceptions.py  _patterns.py
test/: test.py  test_console.py  test_html.py  test_simple.py
(+55 files in other folders)
