# Copyright © 2023 Kalynovsky Valentin. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
# https://pypi.org/classifiers/

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mighty_logger"
version = "0.9.0"
authors = [
	{name = "Kalynovsky 'Nakamura Akira' Valentin", email = "nakama3942@gmail.com"},
]
description = "Powerful functional logger"
readme = "README.md"
license = {text = "Apache License Version 2.0"}
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.11",
	"Topic :: System :: Logging",
]
requires-python = ">=3.11"

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/Nakama3942/mighty_logger"
Releases = "https://github.com/Nakama3942/mighty_logger/releases"

[tool.setuptools]
packages = [
	'mighty_logger',
	'mighty_logger.src',
	'mighty_logger.src.lib_types_collection',
	'mighty_logger.basic',
	'mighty_logger.basic.lib_types'
]
